--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -285,6 +285,9 @@
 
 .contact-section .social {
   margin-top: 2rem;
+  -webkit-box-align: 'center';
+  -ms-flex-align: 'center';
+  align-items: 'center';
 }
 
 .contact-section .social a {
